# KAN-DL

./: .gitignore  README.md  pyproject.toml
kan/: train.py  train_continual_learning.py  utils.py
