[tool.poetry]
name = "kan"
version = "0.1.0"
description = ""
authors = ["Matthijs van der Lende <matthijs.vanderlende@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
setuptools = "^75.6.0"
sympy = "1.11.1"
tqdm = "^4.67.1"
notebook = "^7.2.2"
pandas = "2.2.2"
fvcore = "*"
ucimlrepo = "^0.0.7"
torchtext = "0.17.2"
torch = "2.2.2"
torchaudio = "2.2.2"
torchdata = "0.7.1"
torchvision = "0.17.2"
numpy = "<2"  # For some reason the dependencies require this.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"